--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.9.0",
     "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.9",
+    "cheerio": "^1.1.0",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
     "prisma": "^6.9.0",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/cheerio": "^0.22.35",
     "@types/node": "^20.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
