--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cheerio": "^1.1.0",
     "date-fns": "^4.1.0",
     "next": "15.3.3",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^5.3.31",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -26,6 +28,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/cheerio": "^0.22.35",
     "@types/node": "^20.19.0",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
