--- a/package.json
+++ b/package.json
@@ -10,18 +10,21 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.54.0",
     "@prisma/client": "^6.9.0",
     "@tanstack/react-table": "^8.21.3",
     "chart.js": "^4.4.9",
     "cheerio": "^1.1.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.515.0",
     "next": "15.3.3",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^5.3.31",
     "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zod": "^3.25.64"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
